--- a/todo
+++ b/todo
@@ -1,7 +1,10 @@
-+ print a summary of holdings
-+ rather than dir, also accept a filename for transaction file. Maybe check whether it is a file or dir first?
++ print a summary of holdings: need to format so they are tabular
++ fiat currecies should have 2 decimal places in summary, and show the $, and list them last (and amounts in red?)
 + import a csv file containing a batch of transactions from an exchange
+    ? maybe have a config file that maps fields?
++ display current value in summary (can fetch from public api). Maybe add --portfolio flag?
++ rather than dir, also accept a filename for transaction file. Maybe check whether it is a file or dir first?
 + export a batch of transactions based on date, currency, etc.
 + add a 'confirmed' field so that unconfirmed transactions can be recorded
 + read settings from a config file/env var (eg. default datastore folder)
-? interpret command line args from clipboard
+? interpret command line args from clipboard, eg. can copy a table from an exchange page?
