--- a/todo
+++ b/todo
@@ -1,7 +1,7 @@
-+ print a summary of holdings: need to format so they are tabular
 + fiat currecies should have 2 decimal places in summary, and show the $, and list them last (and amounts in red?)
 + import a csv file containing a batch of transactions from an exchange
     ? maybe have a config file that maps fields?
++ add average price to summary
 + display current value in summary (can fetch from public api). Maybe add --portfolio flag?
 + rather than dir, also accept a filename for transaction file. Maybe check whether it is a file or dir first?
 + export a batch of transactions based on date, currency, etc.
